--- a/SurveyAppClient/surveyapp/src/components/AccountComponents/AccountSettings/AccountSettings.scss
+++ b/SurveyAppClient/surveyapp/src/components/AccountComponents/AccountSettings/AccountSettings.scss
@@ -11,3 +11,11 @@
         margin : 24px 0px;
     }
 }
+
+.strategy{
+    background-color:$color-dark-peach;
+   
+    @include set-size($width: 40px, $height: 40px);
+    padding: 5px;
+    border-radius: 10px;
+}
