--- a/SurveyAppClient/surveyapp/src/pages/PlacePage/PlacePage.scss
+++ b/SurveyAppClient/surveyapp/src/pages/PlacePage/PlacePage.scss
@@ -2,6 +2,9 @@
   @include set-size(100%, 100%);
   padding: 20px 40px;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end; /* Вирівнюємо по лівому краю */
 }
 
 .place {
@@ -15,17 +18,94 @@
   }
 }
 
-.finish_btn{
-  @include set-size(50%, 50px);
-  background-color: rgb(0, 255, 128);
-  @include font($font-size: 1rem, $line-height: $line-height-sm, $color: $black);
-  border-radius: 20px;
-  position: absolute;
-  bottom: 10px; 
-  left: 50%; 
-  transform: translateX(-50%);
+.finish_btn {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-top: 20px;
 }
 
+.finish_btn:hover {
+  background-color: #0056b3;
+}
 .question{
-  padding-top: 40px;
+  padding-top: 20px;
+}
+.page-header {
+  text-align: left;
+  padding-left: 40px;
+  width: 100%;
+}
+.question-container {
+  width: 100%;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  padding: 15px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+}
+
+.question-text {
+  font-weight: bold;
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+
+  span {
+    margin-right: 10px; 
+  }
+
+  .hint-container {
+    position: relative;
+    display: inline-block; 
+  }
+
+  .hint-question {
+    cursor: pointer;
+  }
+
+  .hint-tooltip {
+    position: absolute;
+    top: 20px; 
+    left: 10px; 
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 20px;
+    width: 250px;
+    font-size: 12px;
+    display: none;
+  }
+
+  .hint-question:hover + .hint-tooltip {
+    display: block; 
+  }
+}
+
+.answers {
+  display: flex;
+  flex-direction: column;
+  gap: 10px; 
+  
+}
+.answer-label {
+  display: flex;
+  align-items: center;
+  margin-left: 8px; 
+}
+
+.answer-text {
+  margin-left: 8px; 
+}
+.open-answer-input {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-top: 5px;
 }
