--- a/SurveyAppClient/surveyapp/src/components/PlacesTable/PlacesTable.scss
+++ b/SurveyAppClient/surveyapp/src/components/PlacesTable/PlacesTable.scss
@@ -1,18 +1,20 @@
 .places__table {
-  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   display: grid;
-  padding:20px 0px 0px 40px;
+  grid-template-columns: repeat(auto-fill, minmax(900px, 1fr));
+  gap: 20px;
+  justify-content: center; 
+  padding: 20px; 
 
   @include screen-xxl {
-    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-    padding:20px 0px 0px 30px;
+    grid-template-columns: repeat(auto-fill, minmax(700px, 1fr));
+    padding: 20px 30px;
   }
   @include screen-lg {
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    padding:20px 0px 0px 50px;
+    grid-template-columns: repeat(auto-fill, minmax(600px, 1fr));
+    padding: 20px 30px;
   }
   @include screen-md {
-    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
-    padding:20px 0px 0px 30px;
+    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+    padding: 20px 30px;
   }
 }
