--- a/SurveyAppClient/surveyapp/src/components/PlaceCard/PlaceCard.scss
+++ b/SurveyAppClient/surveyapp/src/components/PlaceCard/PlaceCard.scss
@@ -2,32 +2,31 @@
     @include font($font-size: 1rem, $line-height: $line-height-sm, $color: $black);
     @include set-size(100%, 200px);
     position: relative;
-    padding: 10px 0px 0px 15px;
+    padding: 20px 0px 0px 20px;
     background-color: $white;
-    border-radius: 20px;
+    border-radius: 35px;
     overflow: hidden;
 }
 
 .place__name {
-    padding: 3px 0px 0px 5px;
     @include dots;
     white-space: nowrap; 
 }
   
 .place__rating {
-      padding: 0px 10px 0px 5px;
+
       margin-top: 5px;
       @include dots;
       word-wrap: break-word;
 }
 
 .start_button{
-    @include set-size(300px, 40px);
-    background-color: rgb(0, 174, 255);
-    @include font($font-size: 1rem, $line-height: $line-height-sm, $color: $black);
+    @include set-size(250px, 40px);
+    @include font($font-size: 1rem, $line-height: $line-height-sm, $color: $white);
     border-radius: 20px;
+    border: 1px solid black;
     position: relative;
-    top: 85px;
-    left: 150px; 
+    top: 60px;
+    left: 120px; 
     transform: translateX(-50%);
 }
