--- a/SurveyAppClient/surveyapp/src/pages/PlacePage/PlacePage.scss
+++ b/SurveyAppClient/surveyapp/src/pages/PlacePage/PlacePage.scss
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  align-items: flex-end; /* Вирівнюємо по лівому краю */
+  align-items: flex-end;
 }
 
 .place {
