--- a/SurveyAppClient/surveyapp/src/pages/PlacePage/PlacePage.scss
+++ b/SurveyAppClient/surveyapp/src/pages/PlacePage/PlacePage.scss
@@ -4,7 +4,6 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  align-items: flex-end; /* Вирівнюємо по лівому краю */
 }
 
 .place {
@@ -108,4 +107,12 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   margin-top: 5px;
+}
+
+.completion-message{
+  display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40vh;
+    text-align: center;
 }
