--- a/SurveyAppClient/surveyapp/src/pages/AdminPage/AdminPage.scss
+++ b/SurveyAppClient/surveyapp/src/pages/AdminPage/AdminPage.scss
@@ -1,21 +1,13 @@
-.create-survey {
-    font-family: Arial, sans-serif;
-    padding: 20px;
-  }
-  
+.admin-page {
+  font-family: Arial, sans-serif;
+  padding: 0px 10% 0px 10%;
+
   h1 {
     text-align: center;
     margin-bottom: 20px;
   }
-  
-  input[type='text'] {
-    margin-bottom: 10px;
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  
+
+  input[type='text'],
   select {
     margin-bottom: 10px;
     width: 100%;
@@ -23,8 +15,9 @@
     border: 1px solid #ccc;
     border-radius: 5px;
   }
-  
+
   button {
+    margin-top: 10px;
     margin-bottom: 30px;
     padding: 8px 16px;
     background-color: #007bff;
@@ -32,11 +25,28 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+
+    &:hover {
+      background-color: #0056b3;
+    }
   }
-  
-  button:hover {
-    background-color: #0056b3;
+
+  .section-container {
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 15px;
+
+    h3 {
+      margin-bottom: 10px;
+    }
+
+    .answer-container {
+      display: flex;
+      align-items: center;
+    }
   }
+
   .save-button {
     padding: 8px 16px;
     background-color: #007bff;
@@ -45,9 +55,11 @@
     border-radius: 4px;
     cursor: pointer;
     font-size: 16px;
-    margin-top: 20px;
+    margin-top: 5px;
+    float: right; 
+  
+    &:hover {
+      background-color: #0056b3;
+    }
   }
-
-  .save-button:hover {
-    background-color: #0056b3;
-  }
+}
