--- a/SurveyAppClient/surveyapp/src/components/PlaceCard/PlaceCard.scss
+++ b/SurveyAppClient/surveyapp/src/components/PlaceCard/PlaceCard.scss
@@ -14,7 +14,6 @@
 }
   
 .place__rating {
-
       margin-top: 5px;
       @include dots;
       word-wrap: break-word;
@@ -29,4 +28,5 @@
     top: 60px;
     left: 120px; 
     transform: translateX(-50%);
+    background-color: rgb(0, 140, 255);
 }
